# cs676

./: README.md  TinyTroupe_Installation_and_Usage.ipynb  project1_deliverable1.ipynb  session1b.ipynb  tinytroupe_sim.ipynb  tinytroupe_sim_results.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
credibility_chatbot/: .env  .gitignore  app.py  assess_credibility.py  create_credibility_model.py  credibility_model.pkl  deploy_model_demo.ipynb  deploy_model_demo.py  model_accuracy.ipynb  pyproject.toml  requirements.txt
credibility_chatbot/credibility_chatbot/: README.md
project1/: project1_deliverable1.ipynb
project2/: TinyTroupe_Installation_and_Usage.ipynb  personas.json  tinytroupe_sim.ipynb  tinytroupe_sim_results.ipynb
project2/deliverable1/: conversation_history.md  tinyTroupe_installation_and_usage.md  tinytroupe_sim.ipynb
project2/deliverable2/: app.py  config.py  load_personas.py  simulation_algorithm_design.md  use_cases.md  utils.py
project2/deliverable3/: Dockerfile  README.md  ai_helpers.py  app.py  config.py  config.toml  docker-compose.yml  integration_deployment.md  nginx.conf  prometheus.yml  requirements.txt  simulation_algorithm_design.md  utils.py
project2/deliverable3/personas/: personas.json
project2/deliverable3/tests/: conftest.py  functional_tests.py  test_app.py
project2/deliverable3/tests/e2e/: test_e2e_basic_flow.py  test_e2e_multi_persona.py
project2/deliverable3/tests/integration/: conftest.py  test_api_failures.py  test_app_persona_flow.py  test_file_upload.py
project2/deliverable3/tests/load/: locustfile.py
project2/deliverable3/tests/unit/: test_extract_persona_response.py  test_persona_validation.py  test_sentiment.py  test_utils.py
project3/: README.md  app.py  requirements.txt
project3/agents/: orchestrator.py  prompts.py
project3/tools/: data_tools.py  model_tools.py  training_tools.py
project3/utils/: state.py
