[project]
name = "credibility_chatbot"
version = "0.1.0"
description = "A hybrid rule-based and ML credibility assessment chatbot with web search integration."
authors = [{ name = "Brittany D'Erasmo" }]
readme = "README.md"
requires-python = ">=3.9"

# -----------------------------
# Dependencies
# -----------------------------
dependencies = [
    "streamlit>=1.36.0",
    "openai>=1.3.0",
    "serpapi>=0.1.5",    
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.25.0",
    "pandas>=2.1.0",
    "lxml>=4.9.3",
    "python-dotenv>=1.0.0"
]

[tool.uv]
package = true

[tool.uv.scripts]
app = "streamlit run src/credibility_chatbot/app.py"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"
